MGNLUI-1668 Fixed the overflow problem by hiding overflow on iframe rather then on page-editor.

--- a/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-app-pages/ui-app-pages.scss
+++ b/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-app-pages/ui-app-pages.scss
@@ -23,12 +23,19 @@
       padding-bottom: 40px;
       overflow: visible;
     }
+
+    .pageEditor > iframe {
+      overflow: hidden;
+    }
+
+    .pageEditor {
+      overflow: auto;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .tablet .pageEditor {
-    width: 100%;
-    height: 100%;
     -webkit-overflow-scrolling: touch;
-    overflow: auto;
   }
 }
